# firmware-nordic-thingy53

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  prj.conf
boards/: pm_static_thingy53_nrf5340_cpuapp.yml  shield-nrf7002eb.conf  thingy53.c  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
child_image/: hci_rpmsg.conf
child_image/hci_rpmsg/boards/: thingy53_nrf5340_cpunet.conf
docs/: config_msg.xml  on_connect.xml  sample_request.xml  thingy53_nrf5340_ble_spec.md
drivers/bme68x/: bme68x_port.c  bme68x_port.h
drivers/vm3011/: CMakeLists.txt  Kconfig.vm3011  vm3011.c  vm3011.h
drivers/vm3011/dts/bindings/: vesper,vm3011.yaml
drivers/vm3011/zephyr/: module.yml
ei-model/: README.txt
ei-model/edge-impulse-sdk/classifier/: ei_classifier_types.h  ei_fill_result_struct.h  ei_model_types.h  ei_performance_calibration.h  ei_run_classifier.h
ei-model/edge-impulse-sdk/classifier/inferencing_engines/: tflite_eon.h
ei-model/edge-impulse-sdk/porting/: ei_classifier_porting.h
ei-model/model-parameters/: anomaly_metadata.h  dsp_blocks.h  model_metadata.h  model_variables.h
ei-model/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h  trained_model_compiled.cpp  trained_model_compiled.h
firmware-sdk/: ei_fusion.cpp
src/: ei_at_handlers.cpp  ei_at_handlers.h  ei_base64_encode.cpp  ei_base64_encode.h  ei_device_thingy53.cpp  ei_device_thingy53.h  ei_fusion_sensors_config.h  ei_sampler.cpp  ei_sampler.h  flash_memory.cpp  flash_memory.h  main.cpp
src/ble/: ble_nus.cpp  ble_nus.h  ei_ble_com.cpp  ei_ble_com.h  nus.c  nus.h
src/inference/: ei_run_accelerometer_impulse.cpp  ei_run_audio_impulse.cpp  ei_run_fusion_impulse.cpp  ei_run_impulse.h
src/libs/sensor_aq_mbedtls/: sensor_aq_mbedtls_hs256.cpp
src/sensors/: ei_environment_sensor.cpp  ei_environment_sensor.h  ei_inertial_sensor.cpp  ei_inertial_sensor.h  ei_light_sensor.cpp  ei_light_sensor.h  ei_mag_sensor.cpp  ei_mag_sensor.h  ei_microphone.cpp  ei_microphone.h
src/wifi/: ei_ws_client.cpp  ei_ws_client.h  wifi.cpp  wifi.h
